decaf-compiler/samples/lex/badop.decaf.out

*** Error line 1.
=!
^
*** syntax error

